--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "@types/ziggy-js": "^1.3.2",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.12",
     "axios": "^1.1.2",
@@ -36,6 +35,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
