--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -42,8 +42,10 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.292.0",
+    "next-themes": "^0.3.0",
     "react-day-picker": "8.10.1",
     "react-hook-form": "^7.48.2",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
