--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
+    "html-react-parser": "^5.1.17",
     "lucide-react": "^0.292.0",
     "next-themes": "^0.3.0",
     "react-day-picker": "8.10.1",
